css config variables

--- a/src/App/App.pcss
+++ b/src/App/App.pcss
@@ -7,7 +7,7 @@
   // border: 1px solid green; // DEBUG
   text-align: center;
   &-logo {
-    border: 1px solid red; // DEBUG
+    border: 1px solid $infoColor; // DEBUG: css config variables
     height: 40vmin;
     pointer-events: none;
   }
