--- a/src/index.pcss
+++ b/src/index.pcss
@@ -1,3 +1,8 @@
+/** @module index.pcss
+ *  @since 2020.10.18, 21:16
+ *  @changed 2020.10.18, 22:17
+ */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
